# steam-review-checker

./: .gitignore  .travis.yml  README.md  data_fetcher.py  main.py  setup.cfg  steam_scrape_notes  test.py  web_server.py
.github/workflows/: ci.yml
fetchers/: discussion_fetcher.py  game_fetcher.py  review_fetcher.py  steam_fetcher.py
src/steam_review_checker/: __init__.py  main.py
src/steam_review_checker/fetchers/: discussion_fetcher.py  game_fetcher.py  review_fetcher.py  steam_fetcher.py
src/steam_review_checker/web/: index.html
tests/: test_stuff.py
tests/fetchers/: test_discussion_fetcher.py  test_game_fetcher.py  test_review_fetcher.py
tests/test_data/: 1858760-sale.html
tests/test_data/steam_discussions/: 1000640.html  1342600.html  1512860.html
tests/test_data/steam_discussions/2020/: 1349900.html  597820-page1.html  597820-page31.html  643960.html
tests/test_data/steam_discussions/2021/: 1000640.html  1342600.html  1349900.html  1512860.html  597820-lastpage.html  597820-page1.html  643960.html
tests/test_data/steam_discussions/2022/: 1057990.html  1342600.html  1672920.html  1858760.html
tests/test_data/steam_reviews/: 1000640.json  1346200.json  1512860.json  643960.json
web/: index.html  main.css  main.js  package-lock.json
web/public/: index.html
web/src/: App.css  App.js  Dashboard.js  Discussion.js  Review.js
