[metadata]
name = steam-review-checker
version = 1.1.1
author = nightblade9
author_email = nightbladecodes@gmail.com
description = Shows reviews and discussions for your specified games, newest-first
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nightblade9/steam-review-checker
project_urls =
    Bug Tracker = https://github.com/nightblade9/steam-review-checker/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    lxml
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    steam-review-checker = steam_review_checker:run_app
